--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,8 @@
 output.. = bin/
 bin.includes = plugin.xml,\
-               META-INF/,\
                .,\
                html/,\
-               *.xml
+               *.xml,\
+               index.html,\
+               css/,\
+               META-INF/
